Removed EntityBuilders